proj1/tests/other-tests/minz-tests/error/indent.py
	hey = 1
  hey2 = 2

